shadow issues, logo click on mobile, stcky header scrolling gap reduced

--- a/src/app/pages/home/news-blog/news-blog.component.scss
+++ b/src/app/pages/home/news-blog/news-blog.component.scss
@@ -153,7 +153,9 @@
         position: relative;
         z-index: 5;
         overflow: hidden;
-        box-shadow: 7px 3px 15px -2px rgba(0, 0, 0, 0.2), 5px 3px 15px 0 rgba(0, 0, 0, 0.14), 0 1px 8px 0 rgba(0, 0, 0, 0.12);
+        -webkit-box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.1);
+        box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.1);
+        //box-shadow: 7px 3px 15px -2px rgba(0, 0, 0, 0.2), 5px 3px 15px 0 rgba(0, 0, 0, 0.14), 0 1px 8px 0 rgba(0, 0, 0, 0.12);
         & .blog-sub-cont{
           padding: 20px;
           & h3{
